corrigido bug